Merge origin/master
Conflicts:
	src/main/resources/META-INF/persistence.xml